--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = git://github.com/benoitc/couchbeam.git
 [submodule "lib/nitrogen"]
 	path = lib/nitrogen
-	url = git://github.com/rklophaus/nitrogen.git
+	url = git://github.com/jadahl/nitrogen.git
