--- a/etc/default-cf.config
+++ b/etc/default-cf.config
@@ -1,1 +1,6 @@
-[{nitrogen_core, [{session_timeout, 60}]}].
+[
+    {nitrogen_core, [{session_timeout, 60}]},
+
+    {sasl, [{sasl_error_logger, {file, "./logs/sasl.log"}}]}
+].
+
