Various compatibility fixes.

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,15 +1,24 @@
 [submodule "lib/couchbeam"]
 	path = lib/couchbeam
 	url = git://github.com/benoitc/couchbeam.git
+	ignore = dirty
 [submodule "lib/nitrogen_core"]
 	path = lib/nitrogen_core
 	url = https://github.com/jadahl/nitrogen_core.git
+	ignore = dirty
 [submodule "lib/simple_bridge"]
 	path = lib/simple_bridge
 	url = https://github.com/jadahl/simple_bridge.git
+	ignore = dirty
 [submodule "lib/nprocreg"]
 	path = lib/nprocreg
 	url = https://github.com/nitrogen/nprocreg.git
+	ignore = dirty
 [submodule "lib/ibrowse"]
 	path = lib/ibrowse
 	url = https://github.com/cmullaparthi/ibrowse.git
+	ignore = dirty
+[submodule "lib/erlmarkdown"]
+	path = lib/erlmarkdown
+	url = https://github.com/hypernumbers/erlmarkdown.git
+	ignore = dirty
