Implemented account recovery functionality.
Added dependencies: erlang-uuid, gen_smtp.

Account recovery procedure:
 0. A user `foo' has an E-mail address <foo@bar.se> registered with
    her/his account.
 1. Foo navigates to the `Account' tab of the web site and continues to
    `Lost password'.
 2. Foo gets asked for a username and enters `foo'.
 3. An E-mail containing two links are sent; one continues the recovery,
    the other cancels it. The links contain UUID session IDs that expire
    after a defined amount of time (default: 24 hours).
 4. Foo checks her/his inbox and finds the E-mail and clicks on the
    link which continues the recovery which opens a page asking for a
    new password.
 5. Foo enters a new password, submits the form, and the new password
    gets set.

--- a/.gitmodules
+++ b/.gitmodules
@@ -25,3 +25,9 @@
 [submodule "lib/gettext"]
 	path = lib/gettext
 	url = git@github.com:jadahl/gettext.git
+[submodule "lib/erlang-uuid"]
+	path = lib/erlang-uuid
+	url = git://gitorious.org/avtobiff/erlang-uuid.git
+[submodule "lib/gen_smtp"]
+	path = lib/gen_smtp
+	url = https://github.com/Vagabond/gen_smtp.git
